--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "Lab2_Starter"
+    "liveServer.settings.multiRootWorkspaceName": "fa22-cse110-lab3"
 }
